test/Fail/Issue5705.err
Issue5705.agda:5.15-37: error: [UnequalTypes]
The types
  Set₉₂₂₃₃₇₂₀₃₆₈₅₄₇₇₅₈₀₉
and
  Set₁
are not equal
when checking that the expression Set₉₂₂₃₃₇₂₀₃₆₈₅₄₇₇₅₈₀₈ has type
Set₁
